--- a/index.html
+++ b/index.html
@@ -206,6 +206,17 @@
             #hero h1 { font-size: 5rem; } 
             #main-content { padding: 60px 5%; } 
             .ubicacion-container { grid-template-columns: 1fr; } 
+            
+            /* ===== INICIO DE CAMBIOS PARA CUENTA REGRESIVA ===== */
+            #countdown {
+                gap: 20px; /* Reduce el espacio entre las cajas */
+                flex-wrap: wrap; /* Permite que los elementos se coloquen abajo si no caben */
+            }
+
+            .time-box span {
+                font-size: 2.5rem; /* Reduce el tamaño de los números para que quepan mejor */
+            }
+            /* ===== FIN DE CAMBIOS PARA CUENTA REGRESIVA ===== */
         }
     </style>
 </head>
